# Password-Manager

./: .gitignore  Password_Manager.pro  README.md  client_window.cpp  client_window.h  datamanagement.cpp  datamanagement.h  main.cpp  mainwindow.cpp  mainwindow.h  my_encryption.cpp  my_encryption.h  network_connection.cpp  network_connection.h  resources.qrc  tab_template.cpp  tab_template.h  window_setting.cpp  window_setting.h
Qt-Secret/Qt-AES/: qaesencryption.h  qaesencryption.pro
Qt-Secret/mini-gmp/: .gitignore  CMakeLists.txt  GMP.pro  README.md  doxygen.conf
Qt-Secret/mini-gmp/src/: CMakeLists.txt  bigint.cpp  bigint.h  minigmp_global.h
Qt-Secret/mini-gmp/tests/: CMakeLists.txt  tst_arithmetictests.cpp
img/: my_Styles2.qss
